--- a/css/index.css
+++ b/css/index.css
@@ -76,5 +76,15 @@ li a {
         color: white;
         visibility: visible;
     }
+
+    .news {
+        width: 50vh;
+        height: 92vh;
+        background-color: #E6E9ED;
+        border-radius: 20px;
+        box-shadow: 0px 5px 5px #d4d4d4;
+        margin-left: 20px;
+    }
+
 }
 
