--- a/css/about.css
+++ b/css/about.css
@@ -12,13 +12,15 @@
 }
 
 .content {
-    width: 125vh;
-    height: 92vh;
+    width: 183vh;
+    height: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .card {
     width: inherit;
-    height: 60vh;
+    height: 64vh;
     background-color: #E6E9ED;;
     margin-top: 10px;
     border-radius: 20px;
@@ -27,12 +29,12 @@
 
 @media screen and (min-width:700px){
     .sidebar {
-        width: 20vh;
-        height: 50vh;
+        width: 70vh;
+        height: 64vh;
         background-color: #E6E9ED;
         border-radius: 20px;
         box-shadow: 0px 5px 5px #d4d4d4;
-        margin-left: 20px;
+        margin: 10px 20px;
     }
 
 }
