--- a/css/home.css
+++ b/css/home.css
@@ -26,6 +26,7 @@
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 5px #d4d4d4;
+    color: #325d96;
 }
 
 @media screen and (min-width:700px){
@@ -48,4 +49,13 @@
         margin-left: 20px;
     }
 
+}
+
+.gif {
+    float: right;
+    margin: 20px;
+}
+
+#quote {
+    margin: 0 0 0 80px;
 }
